Restore old get-this-title and rename new one

--- a/src/app/components/get-this-title-new/get-this-title-polish.html
+++ b/src/app/components/get-this-title-new/get-this-title-polish.html
@@ -2,44 +2,44 @@
     <div class="get-this-title">
         <div class="submenu {model.submenu}">
             <div class="pdf-submenu">
-                <h3>Choose PDF</h3>
+                <h3>Wybierz wersję PDF</h3>
                 <a class="btn" href="{model.hiRes}"
-                    tabindex="{model.submenu === 'pdf' ? 0 : -1}">High Resolution</a>
-                <p>Better images, but a large file and a longer download time</p>
+                    tabindex="{model.submenu === 'pdf' ? 0 : -1}">Wysoka rozdzielczość</a>
+                <p>Grafika lepszej jakości, ale większy plik i dłuższy czas pobierania</p>
                 <if condition="model.loRes">
                     <a class="btn" href="{model.loRes}"
-                        tabindex="{model.submenu === 'pdf' ? 0 : -1}">Low Resolution</a>
-                    <p>Same content and shorter download, but some lower resolution images</p>
+                        tabindex="{model.submenu === 'pdf' ? 0 : -1}">Niska rozdzielczość</a>
+                    <p>Ta sama treść w mniejszym pliku, lecz niektóre grafiki nieco gorszej jakości</p>
                 <else>
-                    <p>Low resolution not available</p>
+                    <p>Wersja w niskiej rozdzielczości jest niedostępna</p>
                 </if>
                 <div class="remover" aria-role="button"><i class="fa fa-times" aria-hidden="true"
                     tabindex="{model.submenu === 'pdf' ? 0 : -1}"></i></div>
             </div>
             <div class="print-submenu">
-                <h3>Place an Order</h3>
+                <h3>Złóż zamówienie</h3>
                 <p if="model.bookstore.link">
                     <a href="{model.bookstore.link}" class="btn"
-                        tabindex="{model.submenu === 'print' ? 0 : -1}">Bookstore Orders</a>
-                    Order through indiCo
+                        tabindex="{model.submenu === 'print' ? 0 : -1}">Księgarnia</a>
+                    Zamów w indiCo
                 </p>
                 <p if="model.isHighSchool">
                     <a href="/bulk-order?{model.slug}" class="btn"
-                        tabindex="{model.submenu === 'print' ? 0 : -1}">Bulk Orders</a>
-                    Fill out our form to order in bulk for your school.
+                        tabindex="{model.submenu === 'print' ? 0 : -1}">Zamów hurtowo</a>
+                    Wypełnij formularz, aby zamówić większą liczbę ezgemplarzy dla swojej uczelni.
                 </p>
                 <p if="model.amazon.link">
                     <a href="{model.amazon.link}" class="btn"
-                        tabindex="{model.submenu === 'print' ? 0 : -1}">Individual Orders</a>
-                    {model.amazon.price} from seller \"OpenStax\" on Amazon
+                        tabindex="{model.submenu === 'print' ? 0 : -1}">Kup dla siebie</a>
+                    w cenie {model.amazon.price} od wydawcy \"OpenStax\" w sklepie Amazon
                 </p>
                 <div if="!model.bookstore.link && model.bookstore.comingSoon" class="coming-soon-wrapper">
                     <img class="coming-soon" src="/images/subjects/coming-soon.svg" alt="coming soon">
-                    BOOKSTORE ORDERS
+                    KSIĘGARNIA
                 </div>
                 <div if="!model.amazon.link && model.amazon.comingSoon" class="coming-soon-wrapper">
                     <img class="coming-soon" src="/images/subjects/coming-soon.svg" alt="coming soon">
-                    INDIVIDUAL ORDERS
+                    KUP DLA SIEBIE
                 </div>
                 <div class="remover" aria-role="button"
                     tabindex="{model.submenu === 'print' ? 0 : -1}"><i class="fa fa-times" aria-hidden="true"></i></div>
@@ -50,26 +50,29 @@
                 <a href="{model.webviewLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}" data-submenu="{model.submenu}">
                     <span class="fa fa-laptop"></span>
-                    View online
+                    Zobacz w przeglądarce
+                </a>
+            </div>
+            <div if="model.conceptCoachLink" class="option">
+                <a href="{model.conceptCoachLink}"
+                    tabindex="{model.submenu === '' ? 0 : -1}">
+                    <span class="fas fa-graduation-cap"></span>
+                    Zobacz w Concept Coach
                 </a>
             </div>
             <div if="model.pdfLink" class="option">
                 <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fa fa-cloud-download"></span>
-                    <if condition="model.slug.substr(-6) === 'polska'">
-                        {' Pobierz książkę'}
-                    <else>
-                        {' Download a PDF'}
-                        <if condition="model.comingSoon">{' sample'}</if>
-                    </if>
+                    <span class="fas fa-cloud-download-alt"></span>
+                    Pobierz PDF
+                    <if condition="model.comingSoon">{' (wersja redakcyjna)'}</if>
                 </a>
             </div>
             <div if="model.printLink" class="option">
                 <a href="{model.printLink}" class="show-print-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-book"></span>
-                    Order a print copy
+                    Zamów egzemplarz drukowany
                 </a>
             </div>
             <div if="model.bookshareLink" class="option">
@@ -82,33 +85,26 @@
             <if condition="model.ibookLink">
                 <div if="model.ibookLink2" class="option">
                     <span class="option-header">
-                        <span class="fa fa-apple"></span>
-                        Download on iBooks
+                        <span class="fas fa-tablet-alt"></span>
+                        Pobierz z iBooks
                     </span>
                     <a href="{model.ibookLink}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
-                        Part 1
+                        Część 1
                     </a>
                     <a href="{model.ibookLink2}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
-                        Part 2
+                        Część 2
                     </a>
                 </div>
                 <div if="!model.ibookLink2" class="option">
                     <a href="{model.ibookLink}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
-                        <span class="fa fa-apple"></span>
-                        Download on iBooks
+                        <span class="fas fa-tablet-alt"></span>
+                        Pobierz z iBooks
                     </a>
                 </div>
             </if>
-            <div if="model.kindleLink" class="option">
-                <a href="{model.kindleLink}"
-                    tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fa fa-amazon"></span>
-                    Download for Kindle
-                </a>
-            </div>
         </div>
     </div>
 </template>
