--- a/src/app/components/get-this-title-new/get-this-title.html
+++ b/src/app/components/get-this-title-new/get-this-title.html
@@ -1,21 +1,8 @@
 <template args="model">
+    <div class="modal-region" hidden="{model.modalHiddenAttribute}" skip="true"></div>
+    <div class="toc-region" hidden="{model.tocHiddenAttribute}" skip="true"></div>
     <div class="get-this-title">
         <div class="submenu {model.submenu}">
-            <div class="pdf-submenu">
-                <h3>Choose PDF</h3>
-                <a class="btn" href="{model.hiRes}"
-                    tabindex="{model.submenu === 'pdf' ? 0 : -1}">High Resolution</a>
-                <p>Better images, but a large file and a longer download time</p>
-                <if condition="model.loRes">
-                    <a class="btn" href="{model.loRes}"
-                        tabindex="{model.submenu === 'pdf' ? 0 : -1}">Low Resolution</a>
-                    <p>Same content and shorter download, but some lower resolution images</p>
-                <else>
-                    <p>Low resolution not available</p>
-                </if>
-                <div class="remover" aria-role="button"><i class="fa fa-times" aria-hidden="true"
-                    tabindex="{model.submenu === 'pdf' ? 0 : -1}"></i></div>
-            </div>
             <div class="print-submenu">
                 <h3>Place an Order</h3>
                 <p if="model.bookstore.link">
@@ -46,44 +33,58 @@
             </div>
         </div>
         <div class="options">
+            <div if="model.includeTOC" class="option">
+                <a href="/" role="button" class="show-toc">
+                    <span class="fa fa-list-ol"></span>
+                    <span class="text">Table of contents</span>
+                </a>
+            </div>
             <div if="!model.comingSoon && model.webviewLink" class="option">
                 <a href="{model.webviewLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}" data-submenu="{model.submenu}">
                     <span class="fa fa-laptop"></span>
-                    View online
+                    <span class="text">View online</span>
                 </a>
             </div>
             <div if="model.pdfLink" class="option">
-                <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
+                <a href="{model.pdfLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fa fa-cloud-download"></span>
-                    <if condition="model.slug.substr(-6) === 'polska'">
-                        {' Pobierz książkę'}
-                    <else>
-                        {' Download a PDF'}
-                        <if condition="model.comingSoon">{' sample'}</if>
-                    </if>
+                    <span class="fas fa-cloud-download-alt"></span>
+                    <span class="text">
+                        <if condition="model.slug.substr(-6) === 'polska'">
+                            {' Pobierz książkę'}
+                        <else>
+                            {' Download a PDF'}
+                            <if condition="model.comingSoon">{' sample'}</if>
+                        </if>
+                    </span>
                 </a>
             </div>
             <div if="model.printLink" class="option">
                 <a href="{model.printLink}" class="show-print-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-book"></span>
-                    Order a print copy
+                    <span class="text">
+                        Order a print copy
+                    </span>
                 </a>
             </div>
             <div if="model.bookshareLink" class="option">
                 <a href="{model.bookshareLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
                     <span class="fa fa-volume-up"></span>
-                    Bookshare
+                    <span class="text">
+                        Bookshare
+                    </span>
                 </a>
             </div>
             <if condition="model.ibookLink">
                 <div if="model.ibookLink2" class="option">
                     <span class="option-header">
-                        <span class="fa fa-apple"></span>
-                        Download on iBooks
+                        <span class="fab fa-apple"></span>
+                        <span class="text">
+                            Download on iBooks
+                        </span>
                     </span>
                     <a href="{model.ibookLink}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
@@ -97,16 +98,20 @@
                 <div if="!model.ibookLink2" class="option">
                     <a href="{model.ibookLink}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
-                        <span class="fa fa-apple"></span>
-                        Download on iBooks
+                        <span class="fab fa-apple"></span>
+                        <span class="text">
+                            Download on iBooks
+                        </span>
                     </a>
                 </div>
             </if>
             <div if="model.kindleLink" class="option">
                 <a href="{model.kindleLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fa fa-amazon"></span>
-                    Download for Kindle
+                    <span class="fab fa-amazon"></span>
+                    <span class="text">
+                        Download for Kindle
+                    </span>
                 </a>
             </div>
         </div>
