--- a/src/app/components/get-this-title/get-this-title-polish.html
+++ b/src/app/components/get-this-title/get-this-title-polish.html
@@ -56,14 +56,14 @@
             <div if="model.conceptCoachLink" class="option">
                 <a href="{model.conceptCoachLink}"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fas fa-graduation-cap"></span>
+                    <span class="fa fa-mortar-board"></span>
                     Zobacz w Concept Coach
                 </a>
             </div>
             <div if="model.pdfLink" class="option">
                 <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fas fa-cloud-download-alt"></span>
+                    <span class="fa fa-cloud-download"></span>
                     Pobierz PDF
                     <if condition="model.comingSoon">{' (wersja redakcyjna)'}</if>
                 </a>
@@ -85,7 +85,7 @@
             <if condition="model.ibookLink">
                 <div if="model.ibookLink2" class="option">
                     <span class="option-header">
-                        <span class="fas fa-tablet-alt"></span>
+                        <span class="fa fa-tablet"></span>
                         Pobierz z iBooks
                     </span>
                     <a href="{model.ibookLink}"
@@ -100,7 +100,7 @@
                 <div if="!model.ibookLink2" class="option">
                     <a href="{model.ibookLink}"
                         tabindex="{model.submenu === '' ? 0 : -1}">
-                        <span class="fas fa-tablet-alt"></span>
+                        <span class="fa fa-tablet"></span>
                         Pobierz z iBooks
                     </a>
                 </div>
