Fix layout issues for adoption form buttons and confirmation header

--- a/src/app/pages/adoption-confirmation/header-1.scss
+++ b/src/app/pages/adoption-confirmation/header-1.scss
@@ -23,8 +23,14 @@
         display: inline-flex;
     }
 
+    .content {
+        display: flex;
+    }
+
     .flexrow {
         align-items: flex-end;
+        display: flex;
+        justify-content: flex-start;
         max-width: 100rem;
     }
 
