Add change testimonial on tab click, css for panel content

--- a/src/app/pages/institutional-partnership/institutional-partnership.html
+++ b/src/app/pages/institutional-partnership/institutional-partnership.html
@@ -14,7 +14,7 @@
 	<div class="details">
 	    <div class="tabs">
 			<input name="tabs" type="radio" id="tab-1" checked="checked" class="input"/>
-			<label for="tab-1" class="label">Program details</label>
+			<label for="tab-1" class="label" id="btn-tab1">Program details</label>
 			<div class="panel">
 				<div class="panel-content">
 					<h2>Program</h2>
@@ -39,7 +39,7 @@
 					</p>
 
 					<h2>What you’ll get</h2>
-					<h3>First 12 months in program:</h3>
+					<h5>First 12 months in program:</h5>
 					<ul>
 						<li>Individualized consulting on your OER effort and strategies.</li>
 						<li>For the 2017-2018 academic year, the institutional partner schools in the 2016-2017 program saw a 150% increase in students impacted by OER. This increase impacted an additional 50,000 students for an additional savings of $4.9 million. </li>
@@ -56,7 +56,7 @@
 							<span>*Optional. Travel fees paid for by institution</span>
 						</li>
 					</ul>
-					<h3>After first 12 months in program:</h3>
+					<h5>After first 12 months in program:</h5>
 					<ul>
 						<li>Individualized consulting on your OER effort and strategies.</li>
 						<li>Institutions who have implemented these strategies have, on average, increased the number of faculty adopting OpenStax textbooks by 392% and the number of students impacted by 490% in one year!</li>
@@ -77,6 +77,7 @@
 						<li>At least one institutional representative attend the online kick-off meeting on June 14, 2018.</li>
 						<li>Commit to the activities listed as part of the first year of the partnership program</li>
 						<li>Have one institutional representative participate in at least 75% of the monthly calls (same person each month with one alternate), held usually on the second Thursday of each month at 11 am CT.</li>
+						<li>Meet all program deadlines and reporting requirements</li>
 						<li>Work with a OpenStax representative to develop a strategic plan to increase use of OER at your institution.</li>
 						<li>Willing and able to disseminate information about OpenStax and other OER at your institution.</li>
 						<li>Regularly update OpenStax on the number of faculty and students using OpenStax resources as well as general OER feedback and progress.</li>
@@ -89,7 +90,7 @@
 			</div>
 
 			<input name="tabs" type="radio" id="tab-2" class="input"/>
-			<label for="tab-2" class="label">Application</label>
+			<label for="tab-2" class="label" id="btn-tab2">Application</label>
 			<div class="panel">
 				<div class="panel-content">
 					<iframe src="https://550groupllc.formstack.com/forms/ox_institutional_partner_program" title="OX Institutional Partner Program" width="600" height="400"></iframe>
@@ -102,11 +103,21 @@
 <div class="testimonial">
 	<div class="boxed">
 		<div class="testimonial-box">
-			<p class="text-block">Teaming up with the other OpenStax Institutional Partner schools provided a sense of community as we navigated launching OER initiatives at our own campuses. Learning about other schools’ successes and frustrations each month was inspiring. I learned so many new techniques and innovative ideas that I could then apply at my own campus. I loved the structure of this program. It’s inspiring to see how many students are impacted by OER adoption – the numbers really add up quickly.</p>
-			<div class="writer-info">
-				<p><strong>-Erin Davis</strong> <br/>
-				Distance Education Library Services Coordinator <br/>
-				Utah State University</p>
+			<div class="testimonial-program">
+				<p class="text-block">Teaming up with the other OpenStax Institutional Partner schools provided a sense of community as we navigated launching OER initiatives at our own campuses. Learning about other schools’ successes and frustrations each month was inspiring. I learned so many new techniques and innovative ideas that I could then apply at my own campus. I loved the structure of this program. It’s inspiring to see how many students are impacted by OER adoption – the numbers really add up quickly.</p>
+				<div class="writer-info">
+					<p><strong>-Erin Davis</strong> <br/>
+					Distance Education Library Services Coordinator <br/>
+					Utah State University</p>
+				</div>
+			</div>
+			<div class="testimonial-application">
+				<p class="text-block">Teaming up with the other OpenStax Institutional Partner schools provided a sense of community as we navigated launching OER initiatives at our own campuses. Learning about other schools’ successes and frustrations each month was inspiring. I learned so many new techniques and innovative ideas that I could then apply at my own campus. I loved the structure of this program. It’s inspiring to see how many students are impacted by OER adoption – the numbers really add up quickly.</p>
+				<div class="writer-info">
+					<p><strong>-Erin Davis</strong> <br/>
+					Distance Education Library Services Coordinator <br/>
+					Utah State University</p>
+				</div>
 			</div>
 		</div>
 	</div>
