Add support for delivering synchronous third-party code asynchronously with PostScribe

--- a/src/app/pages/institutional-partnership/institutional-partnership.html
+++ b/src/app/pages/institutional-partnership/institutional-partnership.html
@@ -18,9 +18,9 @@
 			<div class="panel">
 				<div class="panel-content">
 					<h2>Program</h2>
-					<p>OpenStax at Rice University is excited to announce the next round of applications for our Open Educational Resource Institutional Partnership Program, designed to provide you with advice and guidance to greatly increase the use of OER on your campus and create a networking community for support and advice.
+					<p>OpenStax at Rice University is excited to announce the next round of applications for our Open Educational Resource Institutional Partnership Program, designed to provide you with advice and guidance to greatly increase the use of OER on your campus and create a networking community for support and advice.</p>
 
-					This program is for institutions ready to make an impact on campus by dedicating the necessary time and resources in an effort to motivate faculty and effort to utilize OER to drive student success, retention, and completion.
+					<p>This program is for institutions ready to make an impact on campus by dedicating the necessary time and resources in an effort to motivate faculty and effort to utilize OER to drive student success, retention, and completion.
 					</p>
 
 					<h2>Cost</h2>
@@ -52,7 +52,7 @@
 						<li>At least one campus visit by an OpenStax representative.*</li>
 						<li>Up to three webinars on OpenStax, OER, and or Rice University’s role in OER for your institution per year.</li>
 						<li>Press release template for you to send out to generate publicity for your institution.</li>
-						<li>Inclusion on the OpenStax website, presentations, etc. as a partner school.
+						<li>Inclusion on the OpenStax website, presentations, etc. as a partner school.<br>
 							<span>*Optional. Travel fees paid for by institution</span>
 						</li>
 					</ul>
@@ -68,7 +68,7 @@
 					</ul>
 
 					<h2>Current Institutional Partners:</h2>
-					<p><a>Click here</a> for a list of current Institutional Partners.</p>
+					<p><a href="/impact" title="list of current Institutional Partners">Click here</a> for a list of current Institutional Partners.</p>
 
 					<h2>Requirements</h2>
 					<ul>
@@ -92,8 +92,7 @@
 			<input name="tabs" type="radio" id="tab-2" class="input"/>
 			<label for="tab-2" class="label" id="btn-tab2">Application</label>
 			<div class="panel">
-				<div class="panel-content">
-					<iframe src="https://550groupllc.formstack.com/forms/ox_institutional_partner_program" title="OX Institutional Partner Program" width="600" height="400"></iframe>
+				<div class="panel-content" id="formstack-form">
 				</div>
 			</div>
 		</div>
@@ -122,3 +121,7 @@
 		</div>
 	</div>
 </div>
+
+<script type="text/javascript">
+ postscribe('#formstack-form', '<script src=https://550groupllc.formstack.com/forms/js.php/ox_institutional_partner_program><\/script>');
+</script>
