--- a/src/app/pages/institutional-partnership/institutional-partnership.scss
+++ b/src/app/pages/institutional-partnership/institutional-partnership.scss
@@ -3,6 +3,7 @@
 
 .institutional-page {
 	.hero {
+  	background-color: #25C0DA;
 		background-image: url('/images/institutional/banner-institutional.jpg');
 		background-position: center center;
 		background-repeat: no-repeat;
@@ -58,7 +59,7 @@
 				  	opacity: 0;
 				}
 				.label {
-				  	width: 100%;
+				  	width: auto;
 				  	cursor: pointer;
 				  	font-weight: normal;
 				  	font-size: 1.6rem;
@@ -80,10 +81,12 @@
 				  	padding: 0 0 6rem;
 				  	border-top: 1px solid #D5D5D5;
 				  	width: 100%;
+				  	order: 99;
 				  	.panel-content {
 				  		max-width: 80rem;
-				  		h3 {
-				  			margin-top: 3rem;
+				  		h5 {
+				  			margin: 1rem 0;
+				  			color: #424242;
 				  		}
 				  		p {
 				  			margin-top: 1rem;
@@ -103,28 +106,17 @@
 				.input:checked + .label + .panel {
 				  	display: block;
 				}
-				@media (min-width: 600px) {
-				  	.label {
-				    	width: auto;
-				  	}
-				}
-				@media (min-width: 600px) {
-				  	.panel {
-				    	order: 99;
-				  	}
-				}
 			}		
 		}
 	}
 
 	.testimonial {
-		height: 36.7rem;
 		background: #25C0DA;
 		margin-top: 4.3rem;
+		padding-bottom: 3em;
 		.boxed {
 			align-items: flex-start;
 			.testimonial-box {
-				height: 36.9rem;
 				width: 80rem;
 				background: #fff;
 				margin-top: -4.3rem;
@@ -132,6 +124,7 @@
 				display: flex;
 				flex-direction: column;
 				justify-content: flex-end;
+				box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 				.testimonial-program, .testimonial-application {
 					display: none;
 					&.is-show {
