Add testimonial copy under application tab section

--- a/src/app/pages/institutional-partnership/institutional-partnership.html
+++ b/src/app/pages/institutional-partnership/institutional-partnership.html
@@ -111,11 +111,11 @@
 				</div>
 			</div>
 			<div class="testimonial-application">
-				<p class="text-block">Teaming up with the other OpenStax Institutional Partner schools provided a sense of community as we navigated launching OER initiatives at our own campuses. Learning about other schools’ successes and frustrations each month was inspiring. I learned so many new techniques and innovative ideas that I could then apply at my own campus. I loved the structure of this program. It’s inspiring to see how many students are impacted by OER adoption – the numbers really add up quickly.</p>
+				<p class="text-block">With guidance we received through the Institutional Partner program, we were able to strategically plan events and presentations to increase faculty awareness of Open Educational Resources, resulting in more than a dozen new OER adoptions.  We anticipate that number will significantly increase again as we enter the second year of the program.</p>
 				<div class="writer-info">
-					<p><strong>-Erin Davis</strong> <br/>
-					Distance Education Library Services Coordinator <br/>
-					Utah State University</p>
+					<p><strong>-Jennifer Kneafsey</strong> <br/>
+					Associate Professor of Biology<br/>
+					Tulsa Community College</p>
 				</div>
 			</div>
 		</div>
