--- a/src/app/components/shell/header/main-menu/main-menu.html
+++ b/src/app/components/shell/header/main-menu/main-menu.html
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-menu-item login{model.user.username ? ' dropdown' : ''}">
             <if condition="!model.user.username">
-                <a href="{model.login}" class="pardotTrackClick" data-set-redirect="true" data-local="true" role="menuitem">Login</a>
+                <a href="{model.login}" class="pardotTrackClick" data-local="true" role="menuitem">Login</a>
             <else>
                 <div class="login-dropdown rightmost" skip="true"></div>
             </if>
